main.css
#projects .content {
  text-align: center;
  padding: 5rem 0 8rem;
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center; }

#filters {
  text-align: center;
  white-space: nowrap;
  padding: .8rem 0 3rem 0;
  cursor: default; }
  #filters .item {
    -o-transition: 0.7s;
    -ms-transition: 0.7s;
    -moz-transition: 0.7s;
    -webkit-transition: 0.7s;
    Transition: 0.7s;
    display: inline-block;
    border-radius: 1000px;
    height: 2.4rem;
    background-color: #F8F8FA;
    margin: .5rem;
    cursor: pointer; }
    #filters .item p {
      font-family: 'Abel', 'Arial', sans-serif;
      text-transform: uppercase;
      font-weight: lighter;
      letter-spacing: .127rem;
      color: #B1B6B9;
      font-size: 1.3rem;
      padding: 0 2rem;
      margin: 0;
      line-height: 2.6rem; }
  #filters .active {
    background-color: #FB7878;
    cursor: default; }
    #filters .active p {
      color: #fff; }

#gallery {
  display: flex;
  justify-content: center;
  justify-content: flex-start;
  flex-wrap: wrap;
  width: 88vw;
  max-width: 1800px;
  color: #fff;
  font-family: 'Abel', 'Arial', sans-serif;
  text-transform: uppercase;
  font-weight: lighter;
  font-size: 4.7vw;
  line-height: 4.8vw;
  letter-spacing: 0.2vw; }
  #gallery .item {
    -webkit-user-select: none;
    -moz-user-select: none;
    user-select: none;
    position: relative;
    margin: 1%;
    width: 31.3%;
    height: 27.2vw;
    max-height: 56rem;
    display: flex;
    justify-content: center;
    align-items: center;
    overflow: hidden; }
    #gallery .item a span {
      position: absolute;
      z-index: 1;
      width: 100%;
      height: 100%;
      top: 0;
      left: 0; }
  #gallery .img1 {
    background-color: #FFE8A7; }
  #gallery .img2 {
    background-color: #FFA3B4; }
    #gallery .img2 img {
      height: 18vw;
      max-height: 36rem; }
  #gallery .img3 {
    background-color: #E6F0F4; }
  #gallery .img4 {
    background-color: #BEEDFF; }
  #gallery .ourstory {
    background-color: #8E525E;
    background-color: #A25666; }
    #gallery .ourstory img {
      width: 80%; }
  #gallery .portfolio {
    background-color: #FB7878; }
    #gallery .portfolio img {
      width: 50%; }

@media only screen and (min-width: 2000px) {
  #gallery {
    font-size: 9.5rem;
    line-height: 9.7rem; } }
@media only screen and (min-device-width: 768px) {
  #filters .item:hover {
    background-color: #FB7878; }
    #filters .item:hover p {
      color: #fff; } }
@media only screen and (max-width: 768px) {
  #gallery {
    font-size: 7.2vw;
    line-height: 7.2vw;
    letter-spacing: 0.2vw;
    margin: 0;
    padding: 0;
    width: 84vw; }
    #gallery .item {
      margin: 1.5%;
      width: 47%;
      height: 39.7vw;
      max-height: 100%; } }
@media only screen and (max-width: 480px), only screen and (max-device-width: 768px) {
  #filters .item p {
    padding: 0 1.3rem; }

  #projects .content {
    justify-content: center;
    padding: 5rem 0; }

  #gallery {
    font-size: 15vw;
    line-height: 15vw;
    letter-spacing: 0.2vw; }
    #gallery .item {
      margin-bottom: 9%;
      width: 100%;
      height: 80vw;
      max-height: 53.6rem; } }
@media only screen and (max-device-width: 768px) {
  #filters .item {
    -webkit-transition-property: none;
    -moz-transition-property: none;
    -o-transition-property: none;
    transition-property: none; } }
.bio a:hover {
  opacity: .5; }

#highlights table {
  width: 100vw;
  border-collapse: collapse; }
  #highlights table td {
    vertical-align: top;
    padding: .4rem 3.2rem;
    border: 1px solid #D8DBDE; }
#highlights .wide .cell1 {
  padding-left: 0;
  border-left: none; }
#highlights .wide .cell4 {
  padding-right: 0;
  border-right: none; }
#highlights .narrow {
  display: none; }
  #highlights .narrow .cell1,
  #highlights .narrow .cell3 {
    padding-left: 0;
    border-left: none; }
  #highlights .narrow .cell2,
  #highlights .narrow .cell4 {
    padding-right: 0;
    border-right: none; }
#highlights .spacer {
  width: 9vw;
  padding: 0;
  border-right: none;
  border-left: none; }
#highlights span {
  font-family: 'Abel', 'Arial', sans-serif;
  text-transform: uppercase;
  font-weight: lighter;
  letter-spacing: .138rem;
  color: #B1B6B9;
  line-height: 3rem;
  margin-bottom: 1.6rem; }

@media only screen and (max-width: 600px), only screen and (max-device-width: 768px) {
  #highlights .wide {
    display: none; }
  #highlights .narrow {
    display: table; } }
@media only screen and (min-width: 1480px) {
  #highlights .spacer {
    width: calc((100vw - 1200px)/2); } }
.entry table {
  width: 100vw;
  border-collapse: collapse; }
  .entry table td {
    vertical-align: top;
    padding: 5rem 4rem;
    border: 0.1rem solid #D8DBDE; }
.entry .wide .cell1 {
  padding-left: 0;
  border-left: none; }
.entry .wide .cell2 {
  padding-right: 0;
  border-right: none; }
.entry .narrow {
  display: none; }
  .entry .narrow td {
    border-left: none;
    border-right: none; }
  .entry .narrow .cell1 {
    padding-left: 0;
    padding-right: 0; }
  .entry .narrow .cell2 {
    width: calc((100% - 2*9vw)/2);
    padding-left: 0; }
  .entry .narrow .cell3 {
    padding-right: 0; }
  .entry .narrow .cell2,
  .entry .narrow .cell3 {
    padding-top: 3rem;
    padding-bottom: 3rem; }
    .entry .narrow .cell2 p,
    .entry .narrow .cell3 p {
      margin: 3rem 0; }
.entry .spacer {
  width: 9vw;
  padding: 0;
  border-right: none;
  border-left: none; }
.entry span {
  font-family: 'Abel', 'Arial', sans-serif;
  text-transform: uppercase;
  font-weight: lighter;
  letter-spacing: .138rem;
  color: #B1B6B9;
  line-height: 3rem;
  margin-bottom: 1.6rem; }

#portfolio .wide .cell2 {
  width: 30%; }
#portfolio .mockups {
  height: auto; }
  #portfolio .mockups .stretch {
    height: auto;
    background-color: #3B4247; }
/* ... */

